[project]
name = "src"
version = "0.1.0"
description = "An example package for the OSIS Reproducibility Workshop."
authors = [
    { name = "Emanuel Sommer", email = "emanuel.sommer@stat.uni-muenchen.de" },
    { name = "Tobias Weber", email = "tobias.weber@stat.uni-muenchen.de" },
    { name = "Lisa Wimmer", email = "lisa.wimmer@stat.uni-muenchen.de" },
]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "fire==0.6.0",
    "matplotlib==3.8.3",
    "nptyping==2.5.0",
    "numpy==1.26.4",
    "pyyaml==6.0.1",
    "types-pyyaml>=6.0.12.20240311,<7",
    "myst-parser>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "sphinx-autodoc-typehints>=2.0.0,<3",
    "sphinx-rtd-theme>=2.0.0,<3",
    "coverage>=7.5.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
